--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -35,7 +35,8 @@
     "react-router-dom": "^7.4.1",
     "sonner": "^2.0.2",
     "tailwind-merge": "^3.0.2",
-    "tw-animate-css": "^1.2.5"
+    "tw-animate-css": "^1.2.5",
+    "vite": "^6.3.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
@@ -50,8 +51,8 @@
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^15.15.0",
     "postcss": "^8.5.3",
-    "tailwindcss": "^4.1.4",
-    "vite": "^6.3.1"
+    "tailwindcss": "^4.1.4"
+    
   },
   "engines": {
     "node": "20.x"
