--- a/.gitignore
+++ b/.gitignore
@@ -1,45 +1,37 @@
-# Dependencies
-node_modules/
-/.pnp
-.pnp.js
+# === Node Modules ===
+Frontend/node_modules/
+Backend/node_modules/
 
-# Environment files
-.env
-.env.local
-.env.development
-.env.production
-.env.test
+# === Environment Variables ===
+Frontend/.env*
+Backend/.env*
 
-# Build files
-/build
-/dist
-/out
+# === Build Output ===
+Frontend/dist/
+Frontend/.render/
+Frontend/build.sh
 
-# Logs
-logs
-*.log
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-
-# IDE
-.idea/
-.vscode/
-*.swp
-*.swo
-
-# OS
+# === System / OS ===
 .DS_Store
 Thumbs.db
 
-# Testing
-/coverage
+# === Logs ===
+npm-debug.log*
+yarn-debug.log*
+pnpm-debug.log*
 
-# Production
-/build
-/dist
+# === IDEs & Editors ===
+.vscode/
+.idea/
 
-# Misc
-*.pem
-*.key
-*.cert 
+# === Lock files (optional if working in team with strict PM versioning) ===
+# Uncomment if you want to ignore them
+# Frontend/package-lock.json
+# Backend/package-lock.json
+
+# === ESLint / Cache ===
+Frontend/.eslintcache
+
+# === Optional files ===
+*.log
+*.tmp
